--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Sequence</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Official Bootstrap -->
-    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css">
     <!-- Our project CSS -->
@@ -61,7 +60,7 @@
     <!-- Official Bootstrap -->
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Our project JS -->
-    <script src="game.js"></script>
+    <script src="sequence.js"></script>
 
 </body>
 
